@@ -15,6 +15,12 @@ cod-tools (unreleased)
     - COD::DateTime:
       - the 'canonicalise_timestamp()' subroutine.
   * Changed:
+    - COD::UserMessage:
+      - the space (" ") symbol occurring in program name field is no longer
+        escaped;
+      - the newline ('\n') symbol and various braces ('[', ']', '(', ')', 
+        '{', '}') are now escaped in the program name and filename fields;
+      - the tab ('\t') symbol is now escaped in the filename field.
     - cif_cod_check:
       - modifying the warning message about missing authors to use the same
         format as other warnings about missing data items.
